Working on seo 9 feb

--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -97,13 +97,13 @@
             <div class="swiper-container mil-banner-slideshow">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?auto=format&fit=crop&q=60&w=500&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8aXQlMjBzZXJ2aWNlfGVufDB8fDB8fHww" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
+                        <img src="https://images.unsplash.com/photo-1516321318423-f06f85e504b3?auto=format&fit=crop&q=60&w=500&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8aXQlMjBzZXJ2aWNlfGVufDB8fDB8fHww" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="Coding Workspace with Laptop and Code Editor">
                     </div>
                     <div class="swiper-slide">
-                        <img src="https://images.unsplash.com/photo-1521791136064-7986c2920216?auto=format&fit=crop&q=60&w=500&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGl0JTIwc2VydmljZXxlbnwwfHwwfHx8MA%3D%3D" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
+                        <img src="https://images.unsplash.com/photo-1521791136064-7986c2920216?auto=format&fit=crop&q=60&w=500&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGl0JTIwc2VydmljZXxlbnwwfHwwfHx8MA%3D%3D" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="Project Showcase - Coding India Portfolio">
                     </div>
                     <div class="swiper-slide">
-                        <img src="https://images.unsplash.com/photo-1556745753-b2904692b3cd?auto=format&fit=crop&q=60&w=500&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fGl0JTIwc2VydmljZXxlbnwwfHwwfHx8MA%3D%3D" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
+                        <img src="https://images.unsplash.com/photo-1556745753-b2904692b3cd?auto=format&fit=crop&q=60&w=500&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fGl0JTIwc2VydmljZXxlbnwwfHwwfHx8MA%3D%3D" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="Contact Us - Coding India Website Contact Information">
                     </div>
                 </div>
             </div>
@@ -192,7 +192,7 @@
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
                                 <div class="mil-icon-frame-md" style="margin: 25px;">
-                                    <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8d2Vic2l0ZSUyMGRldmVsb3BtZW50fGVufDB8fDB8fHww" style="width: 100%; height: 100%;  border-radius: 15px;" alt="icon">
+                                    <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8d2Vic2l0ZSUyMGRldmVsb3BtZW50fGVufDB8fDB8fHww" style="width: 100%; height: 100%;  border-radius: 15px;" alt="Website Development" />
                                 </div>
                             </div>
                             <div class="mil-service-text">
@@ -206,7 +206,7 @@
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
                                 <div class="mil-icon-frame-md" style="margin: 25px;">
-                                    <img src="https://images.unsplash.com/photo-1562577309-2592ab84b1bc?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VvfGVufDB8fDB8fHww" style="width: 100%; height: 100%;  border-radius: 15px;" alt="icon">
+                                    <img src="https://images.unsplash.com/photo-1562577309-2592ab84b1bc?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VvfGVufDB8fDB8fHww" style="width: 100%; height: 100%;  border-radius: 15px;" alt="SEO - On-page and off-page SEO to improve a website's search engine rankings">
                                 </div>
                             </div>
                             <div class="mil-service-text">
@@ -220,7 +220,7 @@
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
                                 <div class="mil-icon-frame-md" style="margin: 25px;">
-                                    <img src="https://images.unsplash.com/photo-1521302200778-33500795e128?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8eW91dHViZXxlbnwwfHwwfHx8MA%3D%3D" style="width: 100%; height: 100%;  border-radius: 15px;" alt="icon">
+                                    <img src="https://images.unsplash.com/photo-1521302200778-33500795e128?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8eW91dHViZXxlbnwwfHwwfHx8MA%3D%3D" style="width: 100%; height: 100%;  border-radius: 15px;" alt="Video Marketing on platform like Youtube and Instagram">
                                 </div>
                             </div>
                             <div class="mil-service-text">
@@ -236,7 +236,7 @@
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
                                 <div class=" mil-icon-frame-md" style="margin: 25px;">
-                                    <img src="https://images.unsplash.com/photo-1512415031623-5c8392938dc4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cGF5JTIwcGVyJTIwY2xpY2t8ZW58MHx8MHx8fDA%3D" style="width: 100%; height: 100%;  border-radius: 15px;" alt="icon">
+                                    <img src="https://images.unsplash.com/photo-1512415031623-5c8392938dc4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cGF5JTIwcGVyJTIwY2xpY2t8ZW58MHx8MHx8fDA%3D" style="width: 100%; height: 100%;  border-radius: 15px;" alt="Pay Per Click (PPC)">
                                 </div>
                             </div>
                             <div class="mil-service-text">
@@ -250,7 +250,7 @@
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
                                 <div class="mil-icon-frame-md" style="margin: 25px;">
-                                    <img src="https://images.unsplash.com/photo-1631427962232-803d4f30c64f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fGNoYXQlMjBib3R8ZW58MHx8MHx8fDA%3D" style="width: 100%; height: 100%; border-radius: 15px;" alt="icon">
+                                    <img src="https://images.unsplash.com/photo-1631427962232-803d4f30c64f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fGNoYXQlMjBib3R8ZW58MHx8MHx8fDA%3D" style="width: 100%; height: 100%; border-radius: 15px;" alt="Chatbot and AI Marketing">
                                 </div>
                             </div>
                             <div class="mil-service-text">
@@ -265,7 +265,7 @@
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
                                 <div class="mil-icon-frame-md" style="margin: 25px;">
-                                    <img src="https://images.unsplash.com/photo-1622549037543-49cf1ca0babc?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8c29jaWFsJTIwbWVkaWElMjBtYXJrZXRpbmd8ZW58MHx8MHx8fDA%3D" style="width: 100%; height: 100%; border-radius: 15px;" class="img-fluid" alt="icon">
+                                    <img src="https://images.unsplash.com/photo-1622549037543-49cf1ca0babc?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8c29jaWFsJTIwbWVkaWElMjBtYXJrZXRpbmd8ZW58MHx8MHx8fDA%3D" style="width: 100%; height: 100%; border-radius: 15px;" class="img-fluid" alt="Social Media Marketing">
                                 </div>
                             </div>
                             <div class="mil-service-text">
@@ -313,7 +313,7 @@
                         <div class="swiper-slide">
                             <a href="{% url 'portfoliodetail' i.slug %}" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="{{i.img}}" alt="project">
+                                    <img src="{{i.img}}" alt="{{i.name}}">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -380,9 +380,9 @@
 
                         <div class="mil-skill-frame mil-mb-60">
                             <div class="mil-skill-track">
-                                <div class="mil-skill-prog" style="width: 75%"></div>
+                                <div class="mil-skill-prog" style="width: 90%"></div>
                             </div>
-                            <div class="mil-text-sm">75%</div>
+                            <div class="mil-text-sm">90%</div>
                         </div>
 
                     </div>
@@ -404,9 +404,9 @@
 
                         <div class="mil-skill-frame mil-mb-60">
                             <div class="mil-skill-track">
-                                <div class="mil-skill-prog" style="width: 75%"></div>
+                                <div class="mil-skill-prog" style="width: 85%"></div>
                             </div>
-                            <div class="mil-text-sm">75%</div>
+                            <div class="mil-text-sm">85%</div>
                         </div>
 
                     </div>
@@ -416,9 +416,9 @@
 
                         <div class="mil-skill-frame mil-mb-60">
                             <div class="mil-skill-track">
-                                <div class="mil-skill-prog" style="width: 75%"></div>
+                                <div class="mil-skill-prog" style="width: 85%"></div>
                             </div>
-                            <div class="mil-text-sm">75%</div>
+                            <div class="mil-text-sm">85%</div>
                         </div>
 
                     </div>
@@ -491,16 +491,7 @@
                         <div class="swiper-slide">
 
                             <div class="mil-review">
-                                <!-- <div class="mil-stars mil-mb-30">
-                                    <img src="img/icons/sm/11.svg" alt="quote">
-                                    <ul>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                    </ul>
-                                </div> -->
+                                
                                 <p class="mil-mb-30">Working with Coding India has been a game-changer for our nonprofit. They built a beautiful and functional website that effectively communicates our mission and encourages donations. The team's attention to detail and commitment to our cause is truly commendable.</p>
                                 <div class="mil-author">
                                     <!-- <img src="img/faces/1.jpg" alt="Customer"> -->
@@ -514,7 +505,7 @@
                         <div class="swiper-slide">
 
                             <div class="mil-review">
-                                <p class="mil-mb-30">I approached Coding India with an ambitious app idea, and they turned it into a reality. Their app development team is top-notch, and the final product exceeded my expectations. The app is intuitive, bug-free, and has received excellent user feedback. I'm grateful for their dedication and expertise.</p>
+                                <p class="mil-mb-30">I approached Coding India with an <strong>ambitious</strong> app idea, and they turned it into a reality. Their app development team is top-notch, and the final product exceeded my expectations. The app is intuitive, bug-free, and has received excellent user feedback. I'm grateful for their dedication and expertise.</p>
                                 <div class="mil-author">
                                     <!-- <img src="img/faces/2.jpg" alt="Customer"> -->
                                     <div class="mil-name">
@@ -527,17 +518,8 @@
                         <div class="swiper-slide">
 
                             <div class="mil-review">
-                                <!-- <div class="mil-stars mil-mb-30"> -->
-                                    <!-- <img src="img/icons/sm/11.svg" alt="quote">
-                                    <ul>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                        <li><i class="fas fa-star"></i></li>
-                                    </ul> -->
-                                <!-- </div> -->
-                                <p class="mil-mb-30">I had a vision for a mobile app that would enhance my small business, and codingindia.co.in lped me bring that vision to life. They provided valuable insights and guidance throughout the app development process. The app is now a vital tool for my business, helping me connect with customers and increase sales."</p>
+                                
+                                <p class="mil-mb-30">I had a vision for a mobile app that would enhance my small business, and codingindia.co.in helped me bring that vision to life. They provided valuable insights and guidance throughout the app development process. The app is now a vital tool for my business, helping me connect with customers and increase sales.</p>
                                 <div class="mil-author">
                                     <!-- <img src="img/faces/3.jpg" alt="Customer"> -->
                                     <div class="mil-name">
@@ -563,7 +545,7 @@
 
                             <div class="mil-review">
                                 
-                                <p class="mil-mb-30">Digamber and his team at Coding India made our app development journey smooth and efficient. Their technical expertise and agile approach resulted in a robust app that perfectly met our startup's needs. I highly recommend their services to fellow entrepreneurs.</p>
+                                <p class="mil-mb-30">Digamber and his team at <strong>Coding India</strong> made our app development journey smooth and efficient. Their technical expertise and agile approach resulted in a robust app that perfectly met our startup's needs. I highly recommend their services to fellow entrepreneurs.</p>
                                 <div class="mil-author">
                                     <div class="mil-name">
                                         <h6 class="mil-mb-5">Aarti</h6>
