--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-adsense-account" content="ca-pub-2255488648162796">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://codingindia.co.in/">
 
     {% load static %}
     <!-- bootstrap grid css -->
